@@ -81,6 +81,8 @@ Selected @uref{http://www.sospubs.co.uk,,Sound On Sound} Articles:
 	@uref{http://www.sospubs.co.uk/sos/oct02/articles/synthsecrets10.asp,,Part42}
 	@uref{http://www.sospubs.co.uk/sos/nov02/articles/synthsecrets1102.asp,,Part43}
 	@uref{http://www.sospubs.co.uk/sos/dec02/articles/synthsecrets1202.asp,,Part44}
+@item Synth Secrets 2003:
+	@uref{http://www.sospubs.co.uk/sos/jan03/articles/synthsecrets0103.asp,,Part45}
 @end itemize
 
 
